# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml  run-tests.yml
gendiff/: __init__.py  flat.py  gendiff.py  io.py  parsing.py  tree.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_generate_diff.py
gendiff/views/: json.py  plain.py  stylish.py  tree.py
tests/: fixtures_paths.py  test_generate_diff.py
tests/fixtures/diffs/: json_diff.txt
