[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers"
]
authors = ["Sergey Chulkov <s.v.chuklov@ya.ru>"]
repository = "https://github.com/Choolkov/python-project-lvl2.git"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
wemake-python-styleguide = "^0.16.1"
black = {version = "^22.3.0", allow-prereleases = true}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"